setup characters view | TODO character edition

--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -35,6 +35,32 @@ $GRADIENT_BLUE: linear-gradient(to left top, #4392f1, #00abfa, #00c0f9, #00d4f2,
 $GRADIENT_SEA: linear-gradient(to left bottom, #97cc04, #69d85f, #35e097, #04e4c6, #44e5e7);
 $GRADIENT_MAGENTA: linear-gradient(to left, #ef2d6b, #e03589, #c945a3, #ab54b6, #8661c1);
 
+$BARD_GRADIENT: linear-gradient(to left top, #f9b4e1, #f69ed7, #f287cc, #ee6ec1, #ea52b6);
+$BARBARIAN_GRADIENT: linear-gradient(to left top, #fa4a65, #f53b52, #ee2c3e, #e61a2a, #dd0011);
+$WIZARD_GRADIENT: linear-gradient(to left top, #0d3f4e, #005779, #006da7, #3382d5, #7692ff);
+$WARLOCK_GRADIENT: linear-gradient(to right bottom, #4c2483, #582e9e, #643ab9, #6e46d6, #7852f4);
+$SORCERER_GRADIENT: linear-gradient(to left top, #ff791f, #ff7133, #ff6943, #ff6351, #ff5e5e);
+$ROGUE_GRADIENT: linear-gradient(to left top, #324219, #556323, #7e852c, #aea735, #e5c83f);
+$RANGER_GRADIENT: linear-gradient(to left top, #1a4512, #3b6c26, #60953b, #88c051, #b4ec66);
+$PALADIN_GRADIENT: linear-gradient(to right bottom, #151523, #393844, #605f67, #89898d, #b5b5b5);
+$MONK_GRADIENT: linear-gradient(to left bottom, #0f474f, #007174, #009d91, #00caa4, #3ff8ac);
+$FIGHTER_GRADIENT: linear-gradient(to right top, #4e1d17, #753f2d, #9d6345, #c48b5f, #eab57b);
+$CLERIC_GRADIENT: linear-gradient(to right top, #3c565d, #667c83, #93a5aa, #c1d0d4, #f2fcff);
+$DRUID_GRADIENT: linear-gradient(to right top, #515318, #6e751d, #8b9821, #a8be25, #c5e529);
+
+$BARD: #ea52b6;
+$BARBARIAN: #dd0011;
+$WIZARD: #0d3f4e;
+$WARLOCK: #4c2483;
+$SORCERER: #ff5e5e;
+$ROGUE: #324219;
+$RANGER: #1a4512;
+$PALADIN: #151523;
+$MONK: #0f474f;
+$FIGHTER: #4e1d17;
+$CLERIC: #3c565d;
+$DRUID: #515318;
+
 $SOLID_FROM_GREEN: #f3b61f;
 $SOLID_FROM_BLUE: #4392f1;
 $SOLID_FROM_SEA: #97cc04;
