--- a/src/app/components/Characters/CharacterCard/CharacterCard.scss
+++ b/src/app/components/Characters/CharacterCard/CharacterCard.scss
@@ -1,44 +1,199 @@
 @import "../../../style/core/variables";
 
-.encounter {
-    width: 500px;
-    padding: 16px;
-    margin-bottom: 40px;
+.character {
+    position: relative;
+
+    width: 280px;
+    min-height: 440px;
+    padding: 8px;
+    margin: 0 8px 40px;
 
     font-family: $MONTSERRAT;
 
     border: solid 1px rgba($GREY, .2);
     box-sizing: border-box;
 
-    transition: all .5s ease-in-out;
+    background: transparent;
+    transition: all .4s ease-in-out;
 
-    &-name {
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        background: $GRADIENT_PRIMARY;
+        opacity: 0;
+        transition: all .4s ease-in-out;
+        z-index: 0;
+    }
+
+    &.bard { &:after { background: $BARD_GRADIENT; } }
+    &.barbarian { &:after { background: $BARBARIAN_GRADIENT; } }
+    &.cleric { &:after { background: $CLERIC_GRADIENT; } }
+    &.wizard { &:after { background: $WIZARD_GRADIENT; } }
+    &.ranger { &:after { background: $RANGER_GRADIENT; } }
+    &.monk { &:after { background: $MONK_GRADIENT; } }
+    &.warlock { &:after { background: $WARLOCK_GRADIENT; } }
+    &.sorcerer { &:after { background: $SORCERER_GRADIENT; } }
+    &.fighter { &:after { background: $FIGHTER_GRADIENT; } }
+    &.rogue { &:after { background: $ROGUE_GRADIENT; } }
+    &.druid { &:after { background: $DRUID_GRADIENT; } }
+    &.paladin { &:after { background: $PALADIN_GRADIENT; } }
+
+    .meta {
+        position: relative;
+        width: 100%;
+        height: 120px;
         padding: 16px 0 32px;
         color: $GREY_LIGHT;
         text-align: center;
 
-        transition: all .5s ease-in-out;
+        transition: all .4s ease-in-out;
+        z-index: 1;
 
         h3 {
             font-weight: 600;
+            text-transform: capitalize;
+            transition: all .4s ease-in-out;
+        }
+
+        p {
+            font-size: 14px;
+            font-weight: 600;
+            text-transform: capitalize;
+            color: $GREY_MID;
+            transition: all .4s ease-in-out;
+
+            &:after,
+            &:before {
+                content: ' - ';
+            }
         }
     }
 
-    &.active {
+    .class {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+
+        width: 60%;
+        height: 60%;
+
+        transform: translate(-50%, -50%);
+
+        z-index: 1;
+
+        &-svg {
+            width: 100%;
+            height: 100%;
+
+            svg {
+                height: 100%;
+                width: 100%;
+
+                & > * {
+                    fill: $GREY_MID;
+                    transition: all .4s ease-in-out;
+                }
+            }
+        }
+
+    }
+
+    .stats {
+        position: absolute;
+        left: 0;
+        bottom: 24px;
+
+        width: 100%;
+        padding: 0 24px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        z-index: 1;
+
+        .row {
+            width: 50%;
+
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+
+            svg {
+                height: 64px;
+                width: 64px;
+
+                & > * {
+                    fill: $GREY_MID;
+                }
+            }
+
+            span {
+                font-size: 32px;
+                font-weight: 700;
+                color: $GREY_LIGHT;
+                transition: all .4s ease-in-out;
+            }
+        }
+    }
+
+    &.active,
+    &:hover {
         border: solid 1px rgba($SECONDARY, .8);
         box-shadow: 0 0 32px -8px rgba(#000, 1);
 
-        .encounter-name {
-            color: $SECONDARY;
+        &:after {
+            opacity: 1;
         }
-    }
 
-    .animation-container--conditions {
-        position: fixed;
-        top: 50%;
-        left: 50%;
+        &.bard { border-color: $BARD; }
+        &.barbarian { border-color: $BARBARIAN; }
+        &.cleric { border-color: $CLERIC; }
+        &.wizard { border-color: $WIZARD; }
+        &.ranger { border-color: $RANGER; }
+        &.monk { border-color: $MONK; }
+        &.warlock { border-color: $WARLOCK; }
+        &.sorcerer { border-color: $SORCERER; }
+        &.fighter { border-color: $FIGHTER; }
+        &.rogue { border-color: $ROGUE; }
+        &.druid { border-color: $DRUID; }
+        &.paladin { border-color: $PALADIN; }
 
-        z-index: 50;
+        .meta {
+            h3 {
+                color: $GREY_DARK;
+            }
+            p {
+                color: $GREY_DARK;
+            }
+        }
+        .class {
+            &-svg {
+                svg {
+                    & > * {
+                        fill: $GREY_DARK;
+                        opacity: .5;
+                    }
+                }
+            }
+        }
+        .stats {
+            .row {
+                svg {
+                    & > * {
+                        fill: $GREY_DARK;
+                        opacity: .5;
+                    }
+                }
+
+                span {
+                    color: $GREY_DARK;
+                }
+            }
+        }
     }
 }
