setup characters view | TODO character edition

--- a/src/app/components/Characters/CharacterCard/CharacterCard.scss
+++ b/src/app/components/Characters/CharacterCard/CharacterCard.scss
@@ -129,6 +129,7 @@
 
                 & > * {
                     fill: $GREY_MID;
+                    transition: all .3s ease-in-out;
                 }
             }
 
