--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -40,7 +40,7 @@ $BARBARIAN_GRADIENT: linear-gradient(to left top, #fa4a65, #f53b52, #ee2c3e, #e6
 $WIZARD_GRADIENT: linear-gradient(to left top, #0d3f4e, #005779, #006da7, #3382d5, #7692ff);
 $WARLOCK_GRADIENT: linear-gradient(to right bottom, #4c2483, #582e9e, #643ab9, #6e46d6, #7852f4);
 $SORCERER_GRADIENT: linear-gradient(to left top, #ff791f, #ff7133, #ff6943, #ff6351, #ff5e5e);
-$ROGUE_GRADIENT: linear-gradient(to left top, #324219, #556323, #7e852c, #aea735, #e5c83f);
+$ROGUE_GRADIENT: linear-gradient(to right bottom, #ff8204, #ff9d00, #ffb800, #ffd104, #fbeb28);
 $RANGER_GRADIENT: linear-gradient(to left top, #1a4512, #3b6c26, #60953b, #88c051, #b4ec66);
 $PALADIN_GRADIENT: linear-gradient(to right bottom, #151523, #393844, #605f67, #89898d, #b5b5b5);
 $MONK_GRADIENT: linear-gradient(to left bottom, #0f474f, #007174, #009d91, #00caa4, #3ff8ac);
@@ -53,7 +53,7 @@ $BARBARIAN: #dd0011;
 $WIZARD: #0d3f4e;
 $WARLOCK: #4c2483;
 $SORCERER: #ff5e5e;
-$ROGUE: #324219;
+$ROGUE: #ffb800;
 $RANGER: #1a4512;
 $PALADIN: #151523;
 $MONK: #0f474f;
