--- a/src/app/components/__universal/Logo/Logo.scss
+++ b/src/app/components/__universal/Logo/Logo.scss
@@ -11,49 +11,17 @@
 
     .logo-o {
         position: absolute;
-        top: 10px;
-        right: -68px;
+        right: -56px;
+        bottom: 7px;
 
-        color: transparent;
-        font-weight: 900;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        width: 40px;
-        height: 38px;
-        border-radius: 19px;
-
-        background: $GRADIENT_PRIMARY;
-
-        text-transform: uppercase;
-
-        &:before {
-            content: '';
-
-            position: absolute;
-            top: 50%;
-            left: 50%;
-
-            width: 15px;
-            height: 16px;
-            border-radius: 15px;
-
-            background-color: $GREY_DARK;
-            transform: translate(-50%, -50%);
-        }
-
-        &:after {
-            content: '';
-
-            position: absolute;
-            left: -18px;
-            top: 50%;
-
-            width: 8px;
-            height: 8px;
-
-            border-radius: 50%;
-            background: $GRADIENT_PRIMARY;
-
-            transform: translateY(-50%);
+        img {
+            height: 100%;
+            width: auto;
         }
     }
 }
