--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -61,9 +61,9 @@ $FIGHTER: #4e1d17;
 $CLERIC: #3c565d;
 $DRUID: #515318;
 
-$SOLID_FROM_GREEN: #f3b61f;
-$SOLID_FROM_BLUE: #4392f1;
-$SOLID_FROM_SEA: #97cc04;
-$SOLID_FROM_MAGENTA: #ef2d6b;
+$SOLID_FROM_GREEN: #cac200;
+$SOLID_FROM_BLUE: #00abfa;
+$SOLID_FROM_SEA: #04e4c6;
+$SOLID_FROM_MAGENTA: #e03589;
 
 
