--- a/src/app/components/Characters/CharacterCard/CharacterCard.scss
+++ b/src/app/components/Characters/CharacterCard/CharacterCard.scss
@@ -13,7 +13,7 @@
     border: solid 1px rgba($GREY, .2);
     box-sizing: border-box;
 
-    background: transparent;
+    background: $GREY_DARK;
     transition: all .4s ease-in-out;
 
     &:after {
@@ -29,117 +29,221 @@
         z-index: 0;
     }
 
-    &.bard { &:after { background: $BARD_GRADIENT; } }
-    &.barbarian { &:after { background: $BARBARIAN_GRADIENT; } }
-    &.cleric { &:after { background: $CLERIC_GRADIENT; } }
-    &.wizard { &:after { background: $WIZARD_GRADIENT; } }
-    &.ranger { &:after { background: $RANGER_GRADIENT; } }
-    &.monk { &:after { background: $MONK_GRADIENT; } }
-    &.warlock { &:after { background: $WARLOCK_GRADIENT; } }
-    &.sorcerer { &:after { background: $SORCERER_GRADIENT; } }
-    &.fighter { &:after { background: $FIGHTER_GRADIENT; } }
-    &.rogue { &:after { background: $ROGUE_GRADIENT; } }
-    &.druid { &:after { background: $DRUID_GRADIENT; } }
-    &.paladin { &:after { background: $PALADIN_GRADIENT; } }
-
-    .meta {
-        position: relative;
-        width: 100%;
-        height: 120px;
-        padding: 16px 0 32px;
-        color: $GREY_LIGHT;
-        text-align: center;
-
-        transition: all .4s ease-in-out;
-        z-index: 1;
-
-        h3 {
-            font-weight: 600;
-            text-transform: capitalize;
-            transition: all .4s ease-in-out;
+    &.bard {
+        &:after {
+            background: $BARD_GRADIENT;
         }
-
-        p {
-            font-size: 14px;
-            font-weight: 600;
-            text-transform: capitalize;
-            color: $GREY_MID;
-            transition: all .4s ease-in-out;
-
-            &:after,
-            &:before {
-                content: ' - ';
-            }
+    }
+    &.barbarian {
+        &:after {
+            background: $BARBARIAN_GRADIENT;
+        }
+    }
+    &.cleric {
+        &:after {
+            background: $CLERIC_GRADIENT;
+        }
+    }
+    &.wizard {
+        &:after {
+            background: $WIZARD_GRADIENT;
+        }
+    }
+    &.ranger {
+        &:after {
+            background: $RANGER_GRADIENT;
+        }
+    }
+    &.monk {
+        &:after {
+            background: $MONK_GRADIENT;
+        }
+    }
+    &.warlock {
+        &:after {
+            background: $WARLOCK_GRADIENT;
+        }
+    }
+    &.sorcerer {
+        &:after {
+            background: $SORCERER_GRADIENT;
+        }
+    }
+    &.fighter {
+        &:after {
+            background: $FIGHTER_GRADIENT;
+        }
+    }
+    &.rogue {
+        &:after {
+            background: $ROGUE_GRADIENT;
+        }
+    }
+    &.druid {
+        &:after {
+            background: $DRUID_GRADIENT;
+        }
+    }
+    &.paladin {
+        &:after {
+            background: $PALADIN_GRADIENT;
         }
     }
 
-    .class {
+    .front, .back {
         position: absolute;
-        left: 50%;
-        top: 50%;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
 
-        width: 60%;
-        height: 60%;
-
-        transform: translate(-50%, -50%);
-        transition: all .4s ease-in-out;
-
+        backface-visibility: hidden;
+        transition: all .3s ease-in-out;
+    }
+    .front {
+        opacity: 1;
         z-index: 1;
+    }
+    .back {
+        opacity: 0;
+        z-index: -1;
+    }
 
-        &-svg {
+    .card-summary {
+        .meta {
+            position: relative;
             width: 100%;
-            height: 100%;
+            height: 120px;
+            padding: 16px 0 32px;
+            color: $GREY_LIGHT;
+            text-align: center;
 
-            svg {
-                height: 100%;
+            transition: all .4s ease-in-out;
+            z-index: 1;
+
+            h3 {
+                font-weight: 600;
+                text-transform: capitalize;
+                transition: all .4s ease-in-out;
+            }
+
+            p {
+                font-size: 14px;
+                font-weight: 600;
+                text-transform: capitalize;
+                color: $GREY_MID;
+                transition: all .4s ease-in-out;
+
+                &:after,
+                &:before {
+                    content: ' - ';
+                }
+            }
+        }
+        .class {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+
+            width: 60%;
+            height: 60%;
+
+            transform: translate(-50%, -50%);
+            transition: all .4s ease-in-out;
+
+            z-index: 1;
+
+            &-svg {
                 width: 100%;
+                height: 100%;
 
-                & > * {
-                    fill: $GREY_MID;
+                svg {
+                    height: 100%;
+                    width: 100%;
+
+                    & > * {
+                        fill: $GREY_MID;
+                        transition: all .4s ease-in-out;
+                    }
+                }
+            }
+
+        }
+        .stats {
+            position: absolute;
+            left: 0;
+            bottom: 24px;
+
+            width: 100%;
+            padding: 0 24px;
+
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+
+            z-index: 1;
+            transition: all .4s ease-in-out;
+
+            .row {
+                width: 50%;
+
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+
+                svg {
+                    height: 64px;
+                    width: 64px;
+
+                    & > * {
+                        fill: $GREY_MID;
+                        transition: all .3s ease-in-out;
+                    }
+                }
+
+                span {
+                    font-size: 32px;
+                    font-weight: 700;
+                    color: $GREY_LIGHT;
                     transition: all .4s ease-in-out;
                 }
             }
         }
-
     }
+    .card-form {
+        padding: 16px 24px;
 
-    .stats {
-        position: absolute;
-        left: 0;
-        bottom: 24px;
-
-        width: 100%;
-        padding: 0 24px;
-
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-
-        z-index: 1;
-        transition: all .4s ease-in-out;
-
-        .row {
-            width: 50%;
-
+        .add-character-form {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: space-around;
 
-            svg {
-                height: 64px;
-                width: 64px;
-
-                & > * {
-                    fill: $GREY_MID;
-                    transition: all .3s ease-in-out;
-                }
+            & > div {
+                width: 100%;
             }
 
-            span {
-                font-size: 32px;
-                font-weight: 700;
-                color: $GREY_LIGHT;
-                transition: all .4s ease-in-out;
+            .character-stats {
+                flex-direction: column;
+                height: auto;
+
+                & > div {
+                    height: 48px;
+
+                    svg {
+                        width: 64px;
+                        margin-top: -2px;
+                    }
+
+                    .rw-select {
+                        top: -2px;
+                        height: 32px;
+                    }
+
+                    input {
+                        height: 32px;
+                    }
+                }
             }
         }
     }
@@ -152,27 +256,64 @@
             opacity: 1;
         }
 
-        &.bard { border-color: $BARD; }
-        &.barbarian { border-color: $BARBARIAN; }
-        &.cleric { border-color: $CLERIC; }
-        &.wizard { border-color: $WIZARD; }
-        &.ranger { border-color: $RANGER; }
-        &.monk { border-color: $MONK; }
-        &.warlock { border-color: $WARLOCK; }
-        &.sorcerer { border-color: $SORCERER; }
-        &.fighter { border-color: $FIGHTER; }
-        &.rogue { border-color: $ROGUE; }
-        &.druid { border-color: $DRUID; }
-        &.paladin { border-color: $PALADIN; }
+        &.bard {
+            border-color: $BARD;
+        }
+
+        &.barbarian {
+            border-color: $BARBARIAN;
+        }
+
+        &.cleric {
+            border-color: $CLERIC;
+        }
+
+        &.wizard {
+            border-color: $WIZARD;
+        }
+
+        &.ranger {
+            border-color: $RANGER;
+        }
+
+        &.monk {
+            border-color: $MONK;
+        }
+
+        &.warlock {
+            border-color: $WARLOCK;
+        }
+
+        &.sorcerer {
+            border-color: $SORCERER;
+        }
+
+        &.fighter {
+            border-color: $FIGHTER;
+        }
+
+        &.rogue {
+            border-color: $ROGUE;
+        }
+
+        &.druid {
+            border-color: $DRUID;
+        }
+
+        &.paladin {
+            border-color: $PALADIN;
+        }
 
         .meta {
             h3 {
                 color: $GREY_DARK;
             }
+
             p {
                 color: $GREY_DARK;
             }
         }
+
         .class {
             &-svg {
                 svg {
@@ -183,6 +324,7 @@
                 }
             }
         }
+
         .stats {
             .row {
                 svg {
@@ -198,16 +340,21 @@
             }
         }
     }
-
     &.active {
-        .meta {
+        &:after {
             opacity: 0;
         }
-        .class {
+
+        .front {
+            z-index: -1;
             opacity: 0;
         }
-        .stats {
-            opacity: 0;
+
+        .back {
+            opacity: 1;
+            z-index: 1;
+            transform: rotateY(-180deg);
+            backface-visibility: visible;
         }
     }
 }
