--- a/src/app/components/Encounters/EncounterCard/EncounterCard.scss
+++ b/src/app/components/Encounters/EncounterCard/EncounterCard.scss
@@ -36,8 +36,8 @@
 
     .animation-container--conditions {
         position: fixed;
-        top: 50%;
-        left: 50%;
+        top: 0;
+        left: 0;
 
         z-index: 50;
     }
