--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -30,6 +30,7 @@ $ERROR: #E3170A;
 
 $GRADIENT_PRIMARY: linear-gradient(to right bottom, #f15025, #ee4e38, #e94f48, #e35155, #db5461);
 $GRADIENT_GREY: linear-gradient(to right bottom, #c1c1c1, #b7b7b7, #a1a1a1, #8c8c8c, #db5461);
+$GRADIENT_GREY_DARK: linear-gradient(to left top, #878787, #3e3e3e, #1d1d1d, #080808, #080808);
 $GRADIENT_GREEN: linear-gradient(to right top, #97cc04, #b2c700, #cac200, #e0bc04, #f3b61f);
 $GRADIENT_BLUE: linear-gradient(to left top, #4392f1, #00abfa, #00c0f9, #00d4f2, #44e5e7);
 $GRADIENT_SEA: linear-gradient(to left bottom, #97cc04, #69d85f, #35e097, #04e4c6, #44e5e7);
