--- a/src/app/components/Encounters/EncounterCard/EncounterCard.scss
+++ b/src/app/components/Encounters/EncounterCard/EncounterCard.scss
@@ -26,8 +26,8 @@
     }
 
     &.active {
-        border: solid 1px rgba($SECONDARY, .8);
-        box-shadow: 0 0 32px -8px rgba(#000, 1);
+        //border: solid 1px rgba($SECONDARY, .8);
+        //box-shadow: 0 0 32px -8px rgba(#000, 1);
 
         .encounter-name {
             color: $SECONDARY;
