--- a/src/app/components/Encounters/Encounters.scss
+++ b/src/app/components/Encounters/Encounters.scss
@@ -22,7 +22,7 @@
         padding: 40px 0 80px;
     }
 
-    .encounters-container {
+    .encounters-list {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
