--- a/src/app/components/__universal/ActionModal/ActionModal.scss
+++ b/src/app/components/__universal/ActionModal/ActionModal.scss
@@ -17,7 +17,6 @@
         top: 50%;
         left: 50%;
 
-        width: 400px;
         height: auto;
         padding: 24px;
 
@@ -30,6 +29,7 @@
 
         &-header {
             width: 100%;
+            text-align: center;
             font-family: $MONTSERRAT;
 
             h3 {
